# porygon

./: .env.example  .gitignore  .prompt  Dockerfile  README.md  alembic.ini  chat.py  context.py  envinit.sh  main.py  porygon.py  postgres.py  pyproject.toml  reboot.sh  requirements.txt  test.py  tools.py
api_keys/: chatgpt.key
assets/chatgpt/: languages.prompt  story.prompt
assets/convenience/: randomwords.txt  sp500.csv
assets/flashcards/: basic_words.csv
assets/notecards/: test2.csv
commands/: __init__.py  basic.py  chess_gif.py  factorio.bp  factorio_blueprint.py  hello.py  help.py  link.py  lolcustom.py  newgame.py  pokedle.py
custom_commands/: link.py  match_history.py  match_summary.py  newgame.py  newgame_old.py  queue.py  test.py  unlink.py  unqueue.py
data/: summoners.json
data/matches/: NA1_5285712809.json
db/: __init__.py  migrate.py  models.py
db/alembic/: env.py
db/migrations/: 20250810_000001_init.sql  20250810_000002_matches.sql  20250811_accounts.sql
games/: __init__.py  pokedle.py  pokemon.csv
games/pokedle/: __init__.py  generate_pokedle.py  pokedex.json
tools/: __init__.py  accounts.py  calculator.py  discord_metadata.py  gif.py  perplexity.py  readme.py  riot.py
util/: __init__.py  accounts.py  embeds.py  lolcustom.py  postgres.py  riot.py
utils/: postgres.py  riot.py
website/: Procfile  gitasset.py  server.py  typeracer.py  webobject.py
website/.do/: app.yaml  deploy.template.yaml
website/.github/: dependabot.yaml
website/templates/: flashcards.html  homepage.html  notecards.html  typeracer.html
(+17 files in other folders)
