[project]
name = "porygon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.18",
    "openai>=1.40.0",
    "SQLAlchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg2>=2.9.10",
    "requests>=2.32.4",
    "pandas>=2.3.1",
    "bs4>=0.0.2",
]
